# innovation-catalyst-ai-agent

./: README.md
hugging-face-agent/: app.py  requirements.txt
hugging-face-agent/.github/workflows/: deploy.yml
innovation-catalyst-ai-agent/: .gitignore  project_structure.py  pyproject.toml  requirements.txt  run_logs.txt  run_logs_2.txt  setup.py  test.py
innovation-catalyst-ai-agent/configs/: config.yaml
innovation-catalyst-ai-agent/scripts/: performance_test.py  setup_semantic_analysis.py
innovation-catalyst-ai-agent/src/innovation_catalyst/: __init__.py
innovation-catalyst-ai-agent/src/innovation_catalyst/agents/: innovation_agent.py
innovation-catalyst-ai-agent/src/innovation_catalyst/tools/: connection_discovery.py  embeddings.py  innovation_synthesis.py  nlp_analysis.py  novelty_scorer.py  similarity_calculator.py  text_chunking.py  text_extraction.py
innovation-catalyst-ai-agent/src/innovation_catalyst/utils/: config.py  logging.py
innovation-catalyst-ai-agent/tests/: test_connection_discovery.py  test_connection_discovery_manual.py  test_innovation_agent.py  test_semantic_analysis.py
